compiler/tests/fail/arm-m4/and_imm_shifted.jazz
export
fn main(reg u32 x) -> reg u32 {
    x = #AND(x, 0x000cb000);
    return x;
}
